--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
+    "@types/amazon-cognito-auth-js": "^1.3.4",
+    "amazon-cognito-identity-js": "^6.3.12",
     "express": "^4.18.2",
+    "global": "^4.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
