--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "express": "^4.18.2",
     "global": "^4.4.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
