--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.8",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -25,8 +23,10 @@
     "@angular/ssr": "^18.2.4",
     "@types/amazon-cognito-auth-js": "^1.3.4",
     "amazon-cognito-identity-js": "^6.3.12",
+    "aws-sdk": "^2.1691.0",
     "express": "^4.18.2",
     "global": "^4.4.0",
+    "libphonenumber-js": "^1.11.11",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
