--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/amazon-cognito-auth-js": "^1.3.4",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-sdk": "^2.1691.0",
+    "chart.js": "^4.4.5",
     "express": "^4.18.2",
     "global": "^4.4.0",
     "libphonenumber-js": "^1.11.11",
